[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pushary-openai-agents"
version = "0.1.0"
description = "Human-in-the-loop for the OpenAI Agents SDK: a function tool that asks a real human on their phone and blocks on a fail-closed answer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pushary", email = "business@pushary.com" }]
keywords = [
    "openai-agents",
    "human-in-the-loop",
    "ai-agents",
    "approvals",
    "function-tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pushary>=1.3.2",
    "openai-agents>=0.18,<0.19",
]

[project.urls]
Homepage = "https://pushary.com"
Documentation = "https://pushary.com/docs/agents/adapters"

[tool.hatch.build.targets.wheel]
packages = ["src/pushary_openai_agents"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pushary_openai_agents",
    "README.md",
    "LICENSE",
    "tests",
]
